[gd_scene load_steps=2 format=3 uid="uid://b3xk8n5m2q7v1"]

[ext_resource type="Script" path="res://Scripts/UI/MilitaryPanel.gd" id="1_military_panel"]

[node name="MilitaryPanel" type="Panel"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -400.0
offset_bottom = 600.0
grow_horizontal = 0
script = ExtResource("1_military_panel")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.15, 0.15, 0.2, 0.95)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0

[node name="HeaderContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Panel Militar"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="VBoxContainer/HeaderContainer"]
layout_mode = 2
text = "X"

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Unidades" type="Control" parent="VBoxContainer/TabContainer"]
layout_mode = 2

[node name="FilterContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/Unidades"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0

[node name="FilterLabel" type="Label" parent="VBoxContainer/TabContainer/Unidades/FilterContainer"]
layout_mode = 2
text = "Filtro:"

[node name="UnitFilter" type="OptionButton" parent="VBoxContainer/TabContainer/Unidades/FilterContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer/TabContainer/Unidades"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 35.0

[node name="UnitsListContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Unidades/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UnitsLabel" type="Label" parent="VBoxContainer/TabContainer/Unidades/HSplitContainer/UnitsListContainer"]
layout_mode = 2
text = "Unidades Disponibles:"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/TabContainer/Unidades/HSplitContainer/UnitsListContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="UnitsList" type="VBoxContainer" parent="VBoxContainer/TabContainer/Unidades/HSplitContainer/UnitsListContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UnitDetailsContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Unidades/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DetailsLabel" type="Label" parent="VBoxContainer/TabContainer/Unidades/HSplitContainer/UnitDetailsContainer"]
layout_mode = 2
text = "Detalles de Unidad:"

[node name="UnitDetails" type="RichTextLabel" parent="VBoxContainer/TabContainer/Unidades/HSplitContainer/UnitDetailsContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[center]Selecciona una unidad para ver sus detalles[/center]"

[node name="Reclutamiento" type="Control" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="RecruitmentContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Reclutamiento"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 200.0

[node name="RecruitmentLabel" type="Label" parent="VBoxContainer/TabContainer/Reclutamiento/RecruitmentContainer"]
layout_mode = 2
text = "Reclutamiento de Unidades:"

[node name="CityContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/Reclutamiento/RecruitmentContainer"]
layout_mode = 2

[node name="CityLabel" type="Label" parent="VBoxContainer/TabContainer/Reclutamiento/RecruitmentContainer/CityContainer"]
layout_mode = 2
text = "Ciudad:"

[node name="CitySelector" type="OptionButton" parent="VBoxContainer/TabContainer/Reclutamiento/RecruitmentContainer/CityContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UnitTypeContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/Reclutamiento/RecruitmentContainer"]
layout_mode = 2

[node name="UnitTypeLabel" type="Label" parent="VBoxContainer/TabContainer/Reclutamiento/RecruitmentContainer/UnitTypeContainer"]
layout_mode = 2
text = "Tipo de Unidad:"

[node name="UnitTypeSelector" type="OptionButton" parent="VBoxContainer/TabContainer/Reclutamiento/RecruitmentContainer/UnitTypeContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CostLabel" type="RichTextLabel" parent="VBoxContainer/TabContainer/Reclutamiento/RecruitmentContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 80)
bbcode_enabled = true
text = "Selecciona un tipo de unidad"

[node name="RecruitButton" type="Button" parent="VBoxContainer/TabContainer/Reclutamiento/RecruitmentContainer"]
layout_mode = 2
text = "Reclutar Unidad"

[node name="QueueContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Reclutamiento"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 205.0

[node name="QueueLabel" type="Label" parent="VBoxContainer/TabContainer/Reclutamiento/QueueContainer"]
layout_mode = 2
text = "Cola de Reclutamiento:"

[node name="QueueScrollContainer" type="ScrollContainer" parent="VBoxContainer/TabContainer/Reclutamiento/QueueContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="QueueList" type="VBoxContainer" parent="VBoxContainer/TabContainer/Reclutamiento/QueueContainer/QueueScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Batallas" type="Control" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="BattlesContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Batallas"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 250.0

[node name="ActiveBattlesLabel" type="Label" parent="VBoxContainer/TabContainer/Batallas/BattlesContainer"]
layout_mode = 2
text = "Batallas Activas:"

[node name="ActiveBattlesScroll" type="ScrollContainer" parent="VBoxContainer/TabContainer/Batallas/BattlesContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ActiveBattlesList" type="VBoxContainer" parent="VBoxContainer/TabContainer/Batallas/BattlesContainer/ActiveBattlesScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HistoryContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Batallas"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 255.0

[node name="HistoryLabel" type="Label" parent="VBoxContainer/TabContainer/Batallas/HistoryContainer"]
layout_mode = 2
text = "Historial de Batallas:"

[node name="HistoryScroll" type="ScrollContainer" parent="VBoxContainer/TabContainer/Batallas/HistoryContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BattleHistoryList" type="VBoxContainer" parent="VBoxContainer/TabContainer/Batallas/HistoryContainer/HistoryScroll"]
layout_mode = 2
size_flags_horizontal = 3